--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "postinstall": "npm run build",
     "start": "node server.js",
     "lint": "vue-cli-service lint"
   },
@@ -14,6 +15,8 @@
     "@formkit/vue": "^1.0.0-beta.6",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "express": "^4.17.3",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.14",
