--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm run build",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,9 +18,5 @@
   "homepage": "https://github.com/ach-ber/ProjetWeb#readme",
   "engines": {
     "node": "17.x"
-  },
-  "dependencies": {
-    "express": "^4.17.3",
-    "serve-static": "^1.15.0"
   }
 }
